# narc

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile.dev-tools  README.md  meson.build  meson.options
cli/: CMakeLists.txt  meson.build  narc.c  version.h.in
cli/include/: command.h  extensions.h  fnmatch_win.h  meson.build  strbuild.h  strutil.h  strvec.h  utils.h
cli/src/: extensions.c  fnmatch_win.c  narc.c  narc_create.c  narc_extract.c  narc_help.c  narc_info.c  narc_yank.c  strbuild.c  strutil.c  strvec.c  utils.c
docs/: ds-cartridge-filesys.md
include/: narc.h
include/api/: check.h  error.h  load.h
include/defs/: error.h  fimg.h  narc.h
lib/: CMakeLists.txt  meson.build  narc_load.c  narc_strerror.c
lib/check/: narc_check.c  narc_check_fatb.c  narc_check_fimg.c  narc_check_fntb.c  narc_check_header.c  narc_check_vfs.c
lib/error/: narc_strerror.c
lib/include/: narc.h
lib/include/api/: check.h  dump.h  error.h  files.h  load.h  pack.h
lib/include/const/: fatb.h  fimg.h  fntb.h  header.h
lib/include/defs/: error.h  fatb.h  fimg.h  fntb.h  narc.h  vfs.h
lib/include/narc/: narc.h
lib/include/narc/api/: check.h  dump.h  error.h  files.h  load.h  pack.h
lib/include/narc/defs/: fatb.h  fimg.h  narc.h
lib/load/: narc_load.c
lib/src/check/: narc_check.c  narc_check_fatb.c  narc_check_fimg.c  narc_check_fntb.c  narc_check_header.c  narc_check_header_fsize.c  narc_check_vfs.c
lib/src/dump/: narc_dump.c
lib/src/error/: narc_strerror.c
lib/src/files/: narc_files_getext.c  narc_files_getimg.c
lib/src/load/: narc_load.c
lib/src/pack/: narc_pack.c  narc_pack_file.c  narc_pack_file_copy.c  narc_pack_halt.c  narc_pack_start.c
tools/: meson.build  version.sh
